# utils

./: .gitignore  README.md  aws_download.py  aws_find_download_README.md  aws_upload.py  check_2024_missing.py  compare_pdfs_inventory.py  download_pdfs.py  find_pmids_in_s3.py  generate_ris.py  metapub_download.py  oddpub_parse_and_save.R  oddpub_rtransparent.R  pyproject.toml  rename_and_upload.py  s3_csv_inventory.py  verify_pdfs.py
