[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "boto3>=1.35.97",
    "eutils>=0.6.0",
    "metapub>=0.5.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdf2doi>=1.7",
    "python-doi>=0.2.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "boto3-stubs>=1.35.97",
    "flake8>=7.1.1",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "tqdm-stubs>=0.2.1",
]
